--- a/CafeManagerDestopApp/CafeManagerDestopApp/CafeManagerDestopApp.csproj
+++ b/CafeManagerDestopApp/CafeManagerDestopApp/CafeManagerDestopApp.csproj
@@ -153,7 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entitys\Menus.cs" />
-    <Compile Include="Entitys\Table.cs" />
+    <Compile Include="Entitys\TableItem.cs" />
     <Compile Include="Entitys\User.cs" />
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
